# ane-lm-server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-app.sh
app/ANELMServer/: ANELMServerApp.swift  MenuBarView.swift  ModelDownloader.swift  Package.swift  ServerManager.swift
service/: com.ane-lm.server.plist
src/: server.cpp
